--- a/customer.html
+++ b/customer.html
@@ -44,7 +44,7 @@
     <div class="flex min-h-screen">
         <aside class="w-64 bg-white flex flex-col fixed h-full shadow-lg">
             <div class="bg-blue-800 flex items-center space-x-3 py-6 px-6">
-                <img src="https://i.imgur.com/eBf7p2k.png" alt="WashUp Logo" class="h-10 w-10"> <div class="flex flex-col">
+                <img src="image/logo.jpg" alt="WashUp Logo" class="h-10 w-10"> <div class="flex flex-col">
                     <span class="text-xl font-bold text-white">WashUp</span>
                     <span class="text-xs text-blue-200">Customer Dashboard</span>
                 </div>
@@ -88,7 +88,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.096 2.572-1.065z" /><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
                 </button>
                 <div class="flex items-center space-x-3">
-                    <img src="https://i.imgur.com/zrgdG2G.png" alt="Sarah Johnson" class="h-10 w-10 rounded-full"> <div>
+                    <img src="image/people.jpg" alt="Sarah Johnson" class="h-10 w-10 rounded-full"> <div>
                         <span class="font-medium text-gray-800">Sarah Johnson</span>
                         <span class="block text-sm text-gray-500">Customer</span>
                     </div>
